<?xml version="1.0"?>
<package>
  <name>arni_core</name>
  <version>1.1.6</version>
  <description>
    This package contains common ARNI functionality.
    Furthermore, generic launch files and integration tests.
  </description>

  <maintainer email="matthiashadlich@yahoo.de">Matthias Hadlich</maintainer>
  <maintainer email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/arni</url>
  <url type="bugtracker">https://github.com/ROS-PSE/arni/issues</url>url&gt;
  <url type="repository">https://github.com/ROS-PSE/arni</url>url&gt;

  <author email="micha.wetzel@student.kit.edu">Micha Wetzel</author>
  <author email="alex.weber3@gmx.net">Alex Weber</author>
  <author email="matthias.klatte@go4more.de">Matthias Klatte</author>
  <author email="sebastian.kneipp@gmx.net">Sebastian Kneipp</author>
  <author email="matthiashadlich@yahoo.de">Matthias Hadlich</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arni_msgs</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>rosnode</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--  <run_depend>arni_countermeasure</run_depend>
        This pkg is indeed referenced, but it causes cyclic dependency (Catkin terminates with failure) so for now commented out so that Catkin doesn't fail.  -->
  <run_depend>arni_msgs</run_depend>
  <run_depend>arni_nodeinterface</run_depend>
  <run_depend>arni_processing</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
