<?xml version="1.0"?>
<package>
  <name>arni_countermeasure</name>
  <version>1.1.2</version>
  <description>
    The ARNI countermeasure node.
  </description>

  <maintainer email="matthiashadlich@yahoo.de">Matthias Hadlich</maintainer>
  <maintainer email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/arni</url>


  <author email="micha.wetzel@student.kit.edu">Micha Wetzel</author>
  <author email="alex.weber3@gmx.net">Alex Weber</author>
  <author email="matthias.klatte@go4more.de">Matthias Klatte</author>
  <author email="sebastian.kneipp@gmx.net">Sebastian Kneipp</author>
  <author email="matthiashadlich@yahoo.de">Matthias Hadlich</author>


  <build_depend>arni_msgs</build_depend>
  <build_depend>arni_core</build_depend>
  <run_depend>arni_msgs</run_depend>
  <run_depend>arni_core</run_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
