<?xml version="1.0"?>
<package>
  <name>arni_gui</name>
  <version>0.0.0</version>
  <description>The arni_gui package</description>

  <maintainer email="virtubuntu@todo.todo">virtubuntu</maintainer>


  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>arni_msgs</build_depend>
  <build_depend>arni_core</build_depend>
  <build_depend>rosgraph_msg</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>arni_msgs</run_depend>
  <run_depend>arni_core</run_depend>
  <run_depend>rosgraph_msg</run_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
