<?xml version="1.0"?>
<package>
  <name>arni_gui</name>
  <version>1.1.6</version>
  <description>
    Common functionality for the ARNI rqt_gui overview and detail plugins.
  </description>

  <maintainer email="matthiashadlich@yahoo.de">Matthias Hadlich</maintainer>
  <maintainer email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/arni</url>
  <url type="bugtracker">https://github.com/ROS-PSE/arni/issues</url>url&gt;
  <url type="repository">https://github.com/ROS-PSE/arni</url>url&gt;

  <author email="micha.wetzel@student.kit.edu">Micha Wetzel</author>
  <author email="alex.weber3@gmx.net">Alex Weber</author>
  <author email="matthias.klatte@go4more.de">Matthias Klatte</author>
  <author email="sebastian.kneipp@gmx.net">Sebastian Kneipp</author>
  <author email="matthiashadlich@yahoo.de">Matthias Hadlich</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arni_core</build_depend>

  <build_depend>arni_msgs</build_depend>
  <build_depend>genpy</build_depend>
  <build_depend>python_qt_binding</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_graph</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>arni_core</run_depend>
  
  <run_depend>arni_msgs</run_depend>
  <run_depend>genpy</run_depend>
  <run_depend>python-enum</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>python_qt_binding</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_graph</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
