<?xml version="1.0"?>
<package>
  <name>arni_msgs</name>
  <version>1.1.3</version>
  <description>
    ARNI message types, i.e. host, node and rated statistics.
  </description>

  <maintainer email="matthiashadlich@yahoo.de">Matthias Hadlich</maintainer>
  <maintainer email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/arni</url>


  <author email="micha.wetzel@student.kit.edu">Micha Wetzel</author>
  <author email="alex.weber3@gmx.net">Alex Weber</author>
  <author email="matthias.klatte@go4more.de">Matthias Klatte</author>
  <author email="sebastian.kneipp@gmx.net">Sebastian Kneipp</author>
  <author email="matthiashadlich@yahoo.de">Matthias Hadlich</author>

  <build_depend>message_generation</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
