<?xml version="1.0"?>
<package>
  <name>arni_processing</name>
  <version>1.1.2</version>
  <description>
    The ARNI processing node, which rates statistics against their specifications.
  </description>

  <maintainer email="matthiashadlich@yahoo.de">Matthias Hadlich</maintainer>
  <maintainer email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/arni</url>


  <author email="micha.wetzel@student.kit.edu">Micha Wetzel</author>
  <author email="alex.weber3@gmx.net">Alex Weber</author>
  <author email="matthias.klatte@go4more.de">Matthias Klatte</author>
  <author email="sebastian.kneipp@gmx.net">Sebastian Kneipp</author>
  <author email="matthiashadlich@yahoo.de">Matthias Hadlich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>arni_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>arni_msgs</run_depend>

</package>
