<?xml version="1.0"?>
<package>
  <name>rqt_arni_gui_detail</name>
  <version>0.0.0</version>
  <description>The rqt_arni_gui_detail package</description>

  <maintainer email="matthiashadlich@yahoo.de">Matthias Hadlich</maintainer>
  <maintainer email="sebastian.kneipp@gmx.net">Sebastian Kneipp</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>arni_gui</run_depend>
  <run_depend>pyqtgraph</run_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>arni_gui</build_depend>
  <build_depend>pyqtgraph</build_depend>

  <export>    	
	<rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
