<?xml version="1.0"?>
<package>
  <name>rqt_arni_gui_overview</name>
  <version>0.0.0</version>
  <description>The rqt_arni_gui_overview package</description>

  <maintainer email="virtubuntu@todo.todo">virtubuntu</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
 
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>arni_gui</run_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>arni_gui</build_depend>


  <export>    	
	<rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
